<resources>
    <string name="url_" translatable="false">http://192.168.100.14/monshiapp/app/</string>
    <string name="url"  translatable="false">http://qa.monshiapp.com/appA/</string>
    <string name="app_name"        translatable="false">منشی‌ اپ</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_search"   translatable="false">Search</string>
    <string name="drawer_open"     translatable="false">Open</string>
    <string name="drawer_close"    translatable="false">Close</string>
    <string name="login"                translatable="false">ورود</string>
    <string name="signup"               translatable="false">ثبت نام</string>
    <string name="logout"               translatable="false">خروج</string>
    <string name="enter_password"       translatable="false">رمز عبور را وارد کنید</string>
    <string name="enter_username"       translatable="false">نام کاربری را وارد کنید</string>
    <string name="enter_valid_username" translatable="false">یک نام کاربری معتبر وارد کنید</string>
    <string name="enter_valid_password" translatable="false">یک رمز عبور معتبر وارد کنید</string>
    <string name="donot_have_account"   translatable="false">حساب کاربری ندارید ؟</string>
    <string name="forget_password"      translatable="false">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="nav_item_non_login" translatable="false">اکنون ثبت کن</string>
    <string-array name="nav_drawer_labels_non_login">
        <item>@string/nav_item_non_login</item>
    </string-array>
    <string name="nav_item_createbusinessaccount" translatable="false">ایجاد حساب تجاری</string>
    <string name="nav_item_bookNow"               translatable="false">فهرست کسب و کار</string>
    <string name="nav_item_businesslist"          translatable="false">اکنون ثبت کن</string>
    <string name="nav_item_dashboard"             translatable="false">داشبورد</string>
    <string name="nav_item_management_staff"      translatable="false">کارکنان مدیریت</string>
    <string name="nav_item_management_service"    translatable="false">خدمات مدیریت</string>
    <string name="nav_item_calendar"              translatable="false">تقویم</string>
    <string name="nav_item_customer_list"         translatable="false">فهرست مشتری</string>
    <string name="nav_item_bill_history_list"     translatable="false">تاریخ بیل</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_createbusinessaccount</item>
        <item>@string/nav_item_bookNow</item>
        <item>@string/nav_item_businesslist</item>
        <item>@string/nav_item_dashboard</item>
        <item>@string/nav_item_management_staff</item>
        <item>@string/nav_item_management_service</item>
        <item>@string/nav_item_calendar</item>
        <item>@string/nav_item_customer_list</item>
        <item>@string/nav_item_bill_history_list</item>
    </string-array>
    <string name="nav_item_dashboard_recp"          translatable="false">داشبورد</string>
    <string name="nav_item_management_staff_recp"   translatable="false">کارکنان مدیریت</string>
    <string name="nav_item_management_service_recp" translatable="false">خدمات مدیریت</string>
    <string name="nav_item_calendar_recp"           translatable="false">تقویم</string>
    <string name="nav_item_customer_list_recp"      translatable="false">فهرست مشتری</string>
    <string-array name="nav_drawer_labels_recp">
        <item>@string/nav_item_dashboard_recp</item>
        <item>@string/nav_item_management_staff_recp</item>
        <item>@string/nav_item_management_service_recp</item>
        <item>@string/nav_item_calendar</item>
        <item>@string/nav_item_customer_list_recp</item>
    </string-array>
    <string name="nav_item_createbusinessaccount_customer" translatable="false">ایجاد حساب تجاری</string>
    <string name="nav_item_home_customer"                  translatable="false">اکنون ثبت کن</string>
    <string name="nav_item_favort_customer"                translatable="false">علاقه مندیها</string>
    <string name="nav_item_activities_customer"            translatable="false">فعالیت ها</string>
    <string name="nav_item_account_customer"               translatable="false">حساب کاربری</string>
    <string-array name="nav_drawer_labels_customer">
        <item>@string/nav_item_createbusinessaccount_customer</item>
        <item>@string/nav_item_home_customer</item>
        <item>@string/nav_item_favort_customer</item>
        <item>@string/nav_item_activities_customer</item>
        <item>@string/nav_item_account_customer</item>
    </string-array>
    <string name="title_messages" translatable="false">منشی‌ اپ</string>
    <string name="title_friends"  translatable="false">منشی‌ اپ</string>
    <string name="title_home"     translatable="false">منشی‌ اپ</string>
    <string-array name="null_array">
        <item>00:00</item>
    </string-array>
    <string-array name="service_time">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
    <string-array name="service_wait_time">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="service_payonline">
        <item>اجازه پرداخت آنلاین</item>
        <item>بله</item>
        <item>نه</item>
    </string-array>
    <string name="contact_us"                   translatable="false">تماس با ما</string>
    <string-array name="make_staff_recep">
        <item>انتخاب نقش</item>
        <item>منشی‌</item>
        <item>کارکنان</item>
    </string-array>
    <string-array name="service_payonline_yes">
        <item>پرداخت انلاین</item>
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="service_payonline_on">
        <item>pay online</item>
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="verification_code_selection">
        <item>ای میل</item>
        <item>موبائل</item>
    </string-array>
    <string-array name="array_name">
        <item>۰۸:۰۰</item>
        <item>۰۹:۰۰</item>
        <item>۱۰:۰۰</item>
        <item>۱۱:۰۰</item>
        <item>۱۲:۰۰</item>
        <item>۱۳:۰۰</item>
        <item>۱۴:۰۰</item>
        <item>۱۵:۰۰</item>
        <item>۱۶:۰۰</item>
        <item>۱۷:۰۰</item>
        <item>۱۸:۰۰</item>
        <item>۱۹:۰۰</item>
        <item>۲۰:۰۰</item>
    </string-array>
    <string-array name="empty_array_time">
        <item>انتخاب زمان</item>
    </string-array>
    <string-array name="empty_array_service">
        <item>انتخاب خدمات</item>
    </string-array>
    <string-array name="empty_array_staff">
        <item>انتخاب کارکنان</item>
    </string-array>
    <string name="hello_blank_fragment"         translatable="false">Hello blank fragment</string>
    <string name="something_went_wrong"         translatable="false">چیزی اشتباه رفت</string>
    <string name="str_continue"                 translatable="false">Continue</string>
    <string name="customer_name"                translatable="false">نام مشتری</string>
    <string name="customer_email"               translatable="false">آدرس ایمیل</string>
    <string name="customer_phone"               translatable="false">شماره موبایل</string>
    <string name="address"                      translatable="false">نشانی</string>
    <string name="wishlist"                     translatable="false">لیست علاقه مندیها</string>
    <string name="str_businesses"               translatable="false">کسب و کار من</string>
    <string name="str_search_business"          translatable="false">جستجو کردن</string>
    <string name="str_book"                     translatable="false">خانه</string>
    <string name="str_more"                     translatable="false">بیشتر</string>
    <string name="str_dashboard"                translatable="false">داشبورد</string>
    <string name="str_customer"                 translatable="false">لیست مشتریها</string>
    <string name="str_action"                   translatable="false">عمل</string>
    <string name="str_activity"                 translatable="false">فعالیت</string>
    <string name="dashboard"                    translatable="false">داشبورد</string>
    <string name="str_business_list"            translatable="false">ایجاد کسب و کار جدید </string>
    <string name="servic_name"                  translatable="false">نام خدمات</string>
    <string name="str_customer_list"            translatable="false">فهرست مشتری</string>
    <string name="str_service_list"             translatable="false">لیست خدمات</string>
    <string name="str_staff_list"               translatable="false">لیست کارکنان</string>
    <string name="str_mobile"                   translatable="false">سیار</string>
    <string name="str_password"                 translatable="false">کلمه عبور</string>
    <string name="str_profile"                  translatable="false">مشخصات</string>
    <string name="str_favorites"                translatable="false">مورد علاقه</string>
    <string name="str_class_list"               translatable="false">کلاس</string>
    <string name="str_teacher_list"             translatable="false">اساتید</string>
    <string name="str_business_info"            translatable="false">اطلاعات کسب و کار</string>
    <string name="str_label_class_name"         translatable="false">نام کلاس:</string>
    <string name="str_class_session_s"          translatable="false">جلسه کلاس</string>
    <string name="str_online_payment"           translatable="false">پرداخت آنلاین را انتخاب کنید</string>
    <string name="str_name"                     translatable="false">نام</string>
    <string name="how_do_you_want_us_to_answer" translatable="false">چگونه می خواهی ما جواب بدهی؟</string>
    <string name="str_confirm"                  translatable="false">تایید</string>
    <string name="str_privacy_policy"           translatable="false">سیاست حفظ حریم خصوصی</string>
    <string name="persian_continue"             translatable="false">ادامه</string>
    <string name="map"                          translatable="false">نقشه</string>
    <string name="staff"                        translatable="false">کارکنان</string>
    <string name="service"                      translatable="false">خدمات</string>
    <string name="book_appt"                    translatable="false">رزرو</string>
    <string name="str_favorite_list"            translatable="false">علاقه مندیها</string>
    <string name="str_contact_us"               translatable="false">تماس با ما</string>
    <string name="str_chat"                     translatable="false">پشتیبانی</string>
    <string name="str_select_sub_cat"           translatable="false">کسب و کار زیر شاخه</string>
    <string name="str_select_cat"               translatable="false">نوع کسب و کار</string>
    <string name="str_select_city"              translatable="false">انتخاب شهر</string>
    <string name="str_select_state"             translatable="false">انتخاب استان</string>
    <string name="str_logout"                    translatable="false">خروج</string>
    <string name="str_tutorial"                  translatable="false">آموزش</string>
    <string name="str_manage_staff"         translatable="false">مدیریت کارکنان</string>
    <string name="str_manage_service"       translatable="false">مدیریت خدمات</string>
    <string name="str_calendar"             translatable="false">تقویم</string>
    <string name="str_billing"              translatable="false">صورتحساب</string>
    <string name="str_manage_class"         translatable="false">لیست کلاس</string>
    <string name="str_appoinments"          translatable="false">لیست ملاقات ها</string>
    <string name="str_appointments"         translatable="false">قرار ملاقات ها</string>
</resources>