<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/str_book"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/str_search_business"
        app:showAsAction="ifRoom"/>

    <!--<item-->
        <!--android:id="@+id/navigation_dashboard"-->
        <!--android:icon="@drawable/ic_notifications_none_black_24dp"-->
        <!--android:title="@string/str_dashboard"-->
        <!--app:showAsAction="ifRoom"/>-->

    <!--<item-->
        <!--android:id="@+id/navigation_customer"-->
        <!--android:icon="@drawable/ic_person_black_24dp"-->
        <!--android:title="@string/str_customer"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/str_more"
        app:showAsAction="ifRoom"/>

</menu>
