<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".fragments.EditBusinessFragment"
        >

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/dashboard_c"
            android:drawableStart="@drawable/dashboard_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_manage_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_manage_staff"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/p1_c"
            android:drawableStart="@drawable/p1_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_manage_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_manage_service"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/service_c"
            android:drawableStart="@drawable/service_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_manage_class"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/booking_c"
            android:drawableStart="@drawable/booking_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_calendar"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/calendar_c"
            android:drawableStart="@drawable/calendar_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_customer"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/account_c"
            android:drawableStart="@drawable/account_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_appointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_appoinments"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

        <TextView
            android:id="@+id/tv_billing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_billing"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:drawableLeft="@drawable/billing_c"
            android:drawableStart="@drawable/billing_c"
            android:padding="12dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_left_colored_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_left_colored_24dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            />

    </LinearLayout>

</ScrollView>
